# soil-db

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  manage.py  pyproject.toml  widgets.py
api/: filters.py  serializers.py  services.py  urls.py  views.py
deploy/: docker-compose.yaml
deploy/app/: Dockerfile  uwsgi.ini
soil/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/: choices.py  enums.py  forms.py  mappings.py  models.py  services.py  tasks.py  tasks_utils.py  urls.py  views.py
web/admin/: __init__.py  staff.py
web/eav/: __init__.py  registry.py
web/forms/: __init__.py  auth.py  eav_attribute.py  export.py  plant.py  profile.py
web/management/commands/: createprimarytaxon.py
web/migrations/: 0001_initial.py  0002_alter_plant_number.py  0003_taxon_remove_family_order_remove_genus_family_and_more.py  0004_alter_staff_email_alter_staff_name_and_more.py  0005_alter_taxon_parent.py  0006_class_family_phylum_taxon_lft_taxon_mptt_level_and_more.py  0007_remove_family_order_remove_genus_family_and_more.py  0008_plant_digitized_at_alter_taxon_level.py  0008_remove_taxon_lft_remove_taxon_mptt_level_and_more.py  0009_alter_taxon_parent.py  0010_merge_20230305_2250.py  0011_alter_plant_options.py  0011_passwordchange.py  0012_merge_0011_alter_plant_options_0011_passwordchange.py  0013_passwordchange_expired_at.py
web/services/: __init__.py  converter.py  password.py  plant_number.py  url.py
web/static/web/: errors.css  plant.css  plant_crud.js  profile.js  script.js  style.css
web/templates/: messages.html
web/templates/emails/: export_excel.html  password_changing.html
web/templates/web/: 404.html  500.html  auth.html  base.html  base_error.html  error404.html  error500.html  plant.html  plant_form.html  plants.html  profile.html
web/templatetags/: soil.py
web/transitions/: __init__.py
web/transitions/xlsx/: transition.py
web/view/: __init__.py  add_plant.py  auth.py
web/views/: __init__.py  add_plant.py  auth.py  delete_plant.py  errors.py  plant.py  plant_crud.py  plants.py  profile.py
(+25 files in other folders)
